--- a/votaUnicamp.Rmd
+++ b/votaUnicamp.Rmd
@@ -3,7 +3,7 @@ title: "Vota Unicamp"
 output: html_document
 ---
 
-## Introdução
+# Introdução
 
   A um pouco mais de um mês estudantes impulsionados por problemas que as universidades estaduais paulistas (USP, UNESP e UNICAMP) enfrentam, seja ele, má administração, corte financeiros, permanência estudantil, entraram em greve para reinvindicar suas pautas.
 
@@ -25,6 +25,7 @@ library(stringr)
 library(rvest)
 library(googleVis)
 library(leaflet)
+
 #pageatual0 = read_html('http://votaunicamp.herokuapp.com/results/')
 #tblatual = html_table(page)[[2]]
 #head(tblatual)
@@ -34,8 +35,8 @@ tbl = html_table(page)[[2]]
 #head(tbl)
 ```
 
-
 ```{r format, echo=FALSE, warning=FALSE, message=FALSE}
+
 ##formatação dos dados
 colnames(tbl)= c("Cursos", "Total", "Sim","Abstenções", "Não")
 mytbl = data.frame(codigo=as.integer(str_extract(tbl$Curso, "^\\d+")),
@@ -56,62 +57,64 @@ head(mytbl)
 ```
 
 
-## Institutos
+
+
+# Análises
 
 
 ```{r votoinstitutos, echo=FALSE, warning=FALSE, message=FALSE}
 
 ## Separando os dados por institutos 
 
-imecc = subset(mytbl, (nivel == "Graduacao" & (codigo == 2 | codigo == 28 | codigo ==29 | codigo == 1))|(nivel == "Mestrado" & (codigo == 2 | codigo == 1 | codigo ==29)) | (nivel == "Doutorado" & (codigo == 31 | codigo == 51 | codigo ==79)))
+imecc = subset(mytbl, (nivel == "Graduacao" & (codigo == 2 | codigo == 28 | codigo ==29 | codigo == 1))) #|(nivel == "Mestrado" & (codigo == 2 | codigo == 1 | codigo ==29)) | (nivel == "Doutorado" & (codigo == 31 | codigo == 51 | codigo ==79)))
 
-fca = subset(mytbl, (nivel == "Graduacao" & (codigo == 109 | codigo == 110 | codigo == 100 | codigo == 101 | codigo == 102 | codigo == 107)) | (nivel == "Mestrado" & (codigo == 31 | codigo == 51 | codigo ==79)) | (nivel == "Doutorado" & (codigo == 33)))
+fca = subset(mytbl, (nivel == "Graduacao" & (codigo == 109 | codigo == 110 | codigo == 100 | codigo == 101 | codigo == 102 | codigo == 107))) #| (nivel == "Mestrado" & (codigo == 31 | codigo == 51 | codigo ==79)) | (nivel == "Doutorado" & (codigo == 33)))
 
 fcf = subset(mytbl, nivel == "Graduacao" & (codigo == 63))
 
-fcm = subset(mytbl, (nivel == "Graduacao" & (codigo == 58 | codigo == 15)) | (nivel == "Doutorado" &(codigo == 89 | codigo == 8 | codigo == 75 | codigo == 97 | codigo == 23 | codigo == 104 | codigo == 90 | codigo == 87 | codigo == 36 |codigo == 91)) | (nivel == "Mestrado" &(codigo == 49 | codigo == 58 | codigo == 35 | codigo == 42 | codigo == 74 | codigo == 51 | codigo == 50 | codigo == 44 | codigo == 90 |codigo == 48)))
+fcm = subset(mytbl, (nivel == "Graduacao" & (codigo == 58 | codigo == 15))) #| (nivel == "Doutorado" &(codigo == 89 | codigo == 8 | codigo == 75 | codigo == 97 | codigo == 23 | codigo == 104 | codigo == 90 | codigo == 87 | codigo == 36 |codigo == 91)) | (nivel == "Mestrado" &(codigo == 49 | codigo == 58 | codigo == 35 | codigo == 42 | codigo == 74 | codigo == 51 | codigo == 50 | codigo == 44 | codigo == 90 |codigo == 48)))
 
-fe = subset(mytbl, (nivel == "Graduacao" & (codigo == 56 | codigo == 20 | codigo ==38)) | (nivel =="Mestrado" & (codigo == 20 | codigo ==86)) | (nivel == "Doutorado" & (codigo == 70 | codigo == 102)))
+fe = subset(mytbl, (nivel == "Graduacao" & (codigo == 56 | codigo == 20 | codigo ==38)))# | (nivel =="Mestrado" & (codigo == 20 | codigo ==86)) | (nivel == "Doutorado" & (codigo == 70 | codigo == 102)))
   
-fea = subset(mytbl, (nivel == "Graduacao" & (codigo == 13 | codigo == 43)) | (nivel == "Mestrado" & (codigo == 47 | codigo == 56 | codigo == 57 | codigo == 55)) | (nivel == "Doutorado" & (codigo == 81 | codigo == 34 | codigo == 6 | codigo == 7 | codigo == 5)))
+fea = subset(mytbl, (nivel == "Graduacao" & (codigo == 13 | codigo == 43))) # | (nivel == "Mestrado" & (codigo == 47 | codigo == 56 | codigo == 57 | codigo == 55)) | (nivel == "Doutorado" & (codigo == 81 | codigo == 34 | codigo == 6 | codigo == 7 | codigo == 5)))
 
-feagri = subset(mytbl, (nivel == "Graduacao" & (codigo == 8)) | (nivel == "Mestrado" & (codigo == 8)) | (nivel == "Doutorado" & (codigo == 58)))
+feagri = subset(mytbl, (nivel == "Graduacao" & (codigo == 8))) #| (nivel == "Mestrado" & (codigo == 8)) | (nivel == "Doutorado" & (codigo == 58)))
 
-fec = subset(mytbl, (nivel == "Graduacao" & (codigo == 48 | codigo == 12)) | (nivel == "Mestrado" & (codigo == 89 | codigo == 12)) | (nivel == "Doutorado" & (codigo == 32 | codigo == 62)))
+fec = subset(mytbl, (nivel == "Graduacao" & (codigo == 48 | codigo == 12))) # | (nivel == "Mestrado" & (codigo == 89 | codigo == 12)) | (nivel == "Doutorado" & (codigo == 32 | codigo == 62)))
 
-feec = subset(mytbl, (nivel == "Graduacao" & (codigo == 11 | codigo == 41)) | (nivel == "Mestrado" & (codigo == 11)) | (nivel == "Doutorado" & (codigo == 61)))
+feec = subset(mytbl, (nivel == "Graduacao" & (codigo == 11 | codigo == 41))) # | (nivel == "Mestrado" & (codigo == 11)) | (nivel == "Doutorado" & (codigo == 61)))
 
-fef = subset(mytbl, (nivel == "Graduacao" & (codigo == 27 | codigo == 45)) | (nivel == "Mestrado" & (codigo == 28)) | (nivel == "Doutorado" & (codigo == 78)))
+fef = subset(mytbl, (nivel == "Graduacao" & (codigo == 27 | codigo == 45))) # | (nivel == "Mestrado" & (codigo == 28)) | (nivel == "Doutorado" & (codigo == 78)))
 
-fem = subset(mytbl, (nivel == "Graduacao" & (codigo == 49 | codigo == 10))|(nivel == "Mestrado" & (codigo == 72 | codigo == 10 | codigo == 39)) | (nivel == "Doutorado" & (codigo == 98 | codigo == 60 | codigo == 92)))
+fem = subset(mytbl, (nivel == "Graduacao" & (codigo == 49 | codigo == 10))) #|(nivel == "Mestrado" & (codigo == 72 | codigo == 10 | codigo == 39)) | (nivel == "Doutorado" & (codigo == 98 | codigo == 60 | codigo == 92)))
 
-fenf = subset(mytbl, (nivel == "Graduacao" & (codigo == 21)) | (nivel == "Mestrado" & (codigo == 59)) | (nivel == "Doutorado" & (codigo == 100)))
+fenf = subset(mytbl, (nivel == "Graduacao" & (codigo == 21))) # | (nivel == "Mestrado" & (codigo == 59)) | (nivel == "Doutorado" & (codigo == 100)))
 
-feq = subset(mytbl, (nivel == "Graduacao" & (codigo == 9 | codigo == 39)) | (nivel == "Mestrado" & (codigo == 9)) | (nivel == "Doutorado" & (codigo == 59)))
+feq = subset(mytbl, (nivel == "Graduacao" & (codigo == 9 | codigo == 39))) #| (nivel == "Mestrado" & (codigo == 9)) | (nivel == "Doutorado" & (codigo == 59)))
 
-fop = subset(mytbl, (nivel == "Graduacao" & (codigo == 14)) | (nivel == "Mestrado" & (codigo == 67 | codigo == 23 | codigo == 71 | codigo == 70 | codigo == 14 | codigo == 69)) | (nivel == "Doutorado" & (codigo == 16 | codigo == 73 | codigo == 20 | codigo == 19 | codigo == 64 | codigo == 18)))
+fop = subset(mytbl, (nivel == "Graduacao" & (codigo == 14))) #| (nivel == "Mestrado" & (codigo == 67 | codigo == 23 | codigo == 71 | codigo == 70 | codigo == 14 | codigo == 69)) | (nivel == "Doutorado" & (codigo == 16 | codigo == 73 | codigo == 20 | codigo == 19 | codigo == 64 | codigo == 18)))
 
-ft = subset(mytbl, (nivel == "Graduacao" & (codigo == 36 | codigo == 83 | codigo ==73 | codigo == 87 | codigo == 89 | codigo == 88 | codigo == 94)) | (nivel == "Mestrado" & (codigo == 82)) | (nivel == "Doutorado" & (codigo == 35)))
+ft = subset(mytbl, (nivel == "Graduacao" & (codigo == 36 | codigo == 83 | codigo ==73 | codigo == 87 | codigo == 89 | codigo == 88 | codigo == 94))) # | (nivel == "Mestrado" & (codigo == 82)) | (nivel == "Doutorado" & (codigo == 35)))
 
-ia = subset(mytbl, (nivel == "Graduacao" & (codigo == 26 | codigo == 25 | codigo ==64 | codigo == 23 | codigo == 22)) | (nivel == "Mestrado" & (codigo == 87 | codigo == 88 | codigo == 30 | codigo == 73)) | (nivel == "Doutorado" & (codigo == 105 | codigo == 106 | codigo == 2 | codigo == 22)))
+ia = subset(mytbl, (nivel == "Graduacao" & (codigo == 26 | codigo == 25 | codigo ==64 | codigo == 23 | codigo == 22))) # | (nivel == "Mestrado" & (codigo == 87 | codigo == 88 | codigo == 30 | codigo == 73)) | (nivel == "Doutorado" & (codigo == 105 | codigo == 106 | codigo == 2 | codigo == 22)))
 
-ib = subset(mytbl, (nivel == "Graduacao" & (codigo == 6 | codigo == 46)) | (nivel == "Mestrado" & (codigo == 83 | codigo == 65 | codigo == 61 | codigo ==60 | codigo == 63 | codigo == 64 | codigo == 62)) | (nivel == "Doutorado" & (codigo == 101 | codigo == 14 | codigo == 10 | codigo ==9 | codigo == 12 | codigo == 13 | codigo == 11)))
+ib = subset(mytbl, (nivel == "Graduacao" & (codigo == 6 | codigo == 46))) # | (nivel == "Mestrado" & (codigo == 83 | codigo == 65 | codigo == 61 | codigo ==60 | codigo == 63 | codigo == 64 | codigo == 62)) | (nivel == "Doutorado" & (codigo == 101 | codigo == 14 | codigo == 10 | codigo ==9 | codigo == 12 | codigo == 13 | codigo == 11)))
 
-ic = subset(mytbl, (nivel == "Graduacao" & (codigo == 42 | codigo == 34 )) | (nivel == "Mestrado" & (codigo == 3 )) | (nivel == "Doutorado" & (codigo == 53 )) )
+ic = subset(mytbl, (nivel == "Graduacao" & (codigo == 42 | codigo == 34 ))) # | (nivel == "Mestrado" & (codigo == 3 )) | (nivel == "Doutorado" & (codigo == 53 )) )
 
-ie = subset(mytbl, (nivel == "Graduacao" & (codigo == 17 | codigo == 47)) | (nivel == "Mestrado" & (codigo == 53 | codigo == 17)) | (nivel == "Doutorado" & (codigo == 21 | codigo == 67)))
+ie = subset(mytbl, (nivel == "Graduacao" & (codigo == 17 | codigo == 47))) # | (nivel == "Mestrado" & (codigo == 53 | codigo == 17)) | (nivel == "Doutorado" & (codigo == 21 | codigo == 67)))
 
-iel = subset(mytbl, (nivel == "Graduacao" & (codigo == 75 | codigo == 7 | codigo ==57 | codigo == 18)) | (nivel == "Mestrado" & (codigo == 81 | codigo == 18 | codigo == 40 | codigo == 7)) | (nivel == "Doutorado" & (codigo == 68 | codigo == 93 | codigo == 57)))
+iel = subset(mytbl, (nivel == "Graduacao" & (codigo == 75 | codigo == 7 | codigo ==57 | codigo == 18))) # | (nivel == "Mestrado" & (codigo == 81 | codigo == 18 | codigo == 40 | codigo == 7)) | (nivel == "Doutorado" & (codigo == 68 | codigo == 93 | codigo == 57)))
 
-ifch = subset(mytbl, (nivel == "Graduacao" & (codigo == 16 | codigo == 44 | codigo == 30 | codigo == 19)) | (nivel == "Mestrado" & (codigo == 36 | codigo == 37 | codigo == 75 | codigo == 24 | codigo == 19 | codigo == 80 | codigo == 38)) | (nivel == "Doutorado" & (codigo == 28 | codigo == 25 | codigo == 30 | codigo == 66 | codigo == 94 | codigo == 74 | codigo == 69 | codigo == 103 | codigo == 27)))
+ifch = subset(mytbl, (nivel == "Graduacao" & (codigo == 16 | codigo == 44 | codigo == 30 | codigo == 19))) # | (nivel == "Mestrado" & (codigo == 36 | codigo == 37 | codigo == 75 | codigo == 24 | codigo == 19 | codigo == 80 | codigo == 38)) | (nivel == "Doutorado" & (codigo == 28 | codigo == 25 | codigo == 30 | codigo == 66 | codigo == 94 | codigo == 74 | codigo == 69 | codigo == 103 | codigo == 27)))
 
 profis = subset(mytbl, nivel == "Graduacao" & (codigo == 200))
 
-iq = subset(mytbl, (nivel == "Graduacao" & (codigo == 5 | codigo == 50)) | (nivel == "Mestrado" & (codigo == 5)) | (nivel == "Doutorado" & (codigo == 55)))
+iq = subset(mytbl, (nivel == "Graduacao" & (codigo == 5 | codigo == 50))) # | (nivel == "Mestrado" & (codigo == 5)) | (nivel == "Doutorado" & (codigo == 55)))
 
-ig = subset(mytbl, (nivel == "Graduacao" & (codigo == 54 | codigo == 55 | codigo ==53)) | (nivel == "Mestrado" & (codigo == 54 | codigo == 26 | codigo == 79 | codigo == 41)) | (nivel == "Doutorado" & (codigo == 26 | codigo == 76 | codigo == 24 | codigo ==95)))
+ig = subset(mytbl, (nivel == "Graduacao" & (codigo == 54 | codigo == 55 | codigo ==53))) # | (nivel == "Mestrado" & (codigo == 54 | codigo == 26 | codigo == 79 | codigo == 41)) | (nivel == "Doutorado" & (codigo == 26 | codigo == 76 | codigo == 24 | codigo ==95)))
 
-ifgw = subset(mytbl, (nivel == "Graduacao" & (codigo == 108 | codigo == 4 | codigo ==40 | codigo == 51)) | (nivel == "Mestrado" & (codigo == 4)) | (nivel == "Doutorado" & (codigo == 54)))
+ifgw = subset(mytbl, (nivel == "Graduacao" & (codigo == 108 | codigo == 4 | codigo ==40 | codigo == 51))) # | (nivel == "Mestrado" & (codigo == 4)) | (nivel == "Doutorado" & (codigo == 54)))
 
 #criando data.frame - inst.
 institutos = data.frame(matrix(nrow = 22, ncol = 5))
@@ -143,11 +146,11 @@ institutos[18,] = c(sum(ig$total), sum(ig$sim), sum(ig$nao), sum(ig$abstencao), 
 institutos[7,] = c(sum(ifgw$total), sum(ifgw$sim), sum(ifgw$nao), sum(ifgw$abstencao), "IFGW")
 
 
-#institutos limeira
+#Institutos Limeira
 institutoslim[1,] = c(sum(fca$total), sum(fca$sim), sum(fca$nao), sum(fca$abstencao), "FCA")
 institutoslim[2,] = c(sum(ft$total), sum(ft$sim), sum(ft$nao), sum(ft$abstencao), "FT")
 
-#institutos Piracicaba
+#Institutos Piracicaba
 institutospira[1,] = c(sum(fop$total), sum(fop$sim), sum(fop$nao), sum(fop$abstencao), "FOP")
 
 #Nomes por institutos
@@ -159,12 +162,7 @@ colnames(institutos) = c("Total", "Sim", "Nao", "Abstencao", "Nomes")
 rownames(institutos) = c("IMECC", "FEM", "FEF", "IA", "IEL", "IFCH", "IFGW", "IQ", "IB", "FEEC", "FEQ", "FE", "IE", "IC", "FEC", "FEAGRI", "FCM", "IG", "FEA", "PROFIS", "FENF", "FCF")
 ```
 
-
-# por área
-
-# Criação de vetores para separar as áreas do conhecimento
-
-```{r areas, echo=FALSE, warning=FALSE, message=FALSE } 
+```{r areas, echo=FALSE, warning=FALSE, message=FALSE, eval=FALSE } 
 # Aqui estamos criando vetores para dividir os cursos em suas areas de atuacao
 artes = c(22,23,25,26,64)
 bio_camp = c(6,27,45,21,63,58,46,15)
@@ -200,64 +198,57 @@ areasuni[2,] = c(exatas$total, exatas$sim, exatas$nao, exatas$abstencao)
 areasuni[3,] = c(biologicas$total, biologicas$sim, biologicas$nao, biologicas$abstencao)
 ```
 
-```{r barras, echo=FALSE, warning=FALSE, message=FALSE}
-#bel = c(40,25,3)
-#pie(bel, col = c("gray67", "gray28", "gray87"))
+## proporção por area
+```{r proporção, echo=FALSE, warning=FALSE, message=FALSE }
+#calculando a propoção dos institutos de campinas
+institutos[,1] = as.numeric(institutos[,1])
+institutos[,2] = as.numeric(institutos[,2])
+institutos[,3] = as.numeric(institutos[,3])
+institutos[,4] = as.numeric(institutos[,4])
+propcamp =  data.frame(matrix(nrow = length(institutos$Total), ncol = 3))
+for(i in 1:dim(institutos)[1])
+{ propcamp[i,] = c(100*(sum(institutos[i,2])/sum(institutos[i,1])), 100*(sum(institutos[i,3])/sum(institutos[i,1])), 100*(sum(institutos[i,4])/sum(institutos[i,1]))) 
+}
+
+#calculando a propoção dos institutos de limeira
+institutoslim[,1] = as.numeric(institutoslim[,1])
+institutoslim[,2] = as.numeric(institutoslim[,2])
+institutoslim[,3] = as.numeric(institutoslim[,3])
+institutoslim[,4] = as.numeric(institutoslim[,4])
+proplim =  data.frame(matrix(nrow = length(institutoslim$Total), ncol = 3))
+for(i in 1:dim(institutoslim)[1])
+{ proplim[i,] = c(100*(sum(institutoslim[i,2])/sum(institutoslim[i,1])), 100*(sum(institutoslim[i,3])/sum(institutoslim[i,1])), 100*(sum(institutoslim[i,4])/sum(institutoslim[i,1]))) 
+}
+
+#calculando a propoção dos institutos de piracicaba
+institutospira[,1] = as.numeric(institutospira[,1])
+institutospira[,2] = as.numeric(institutospira[,2])
+institutospira[,3] = as.numeric(institutospira[,3])
+institutospira[,4] = as.numeric(institutospira[,4])
+proppira =  data.frame(matrix(nrow = length(institutospira$Total), ncol = 3))
+proppira[1,] = c((100*(sum(institutospira[1,2])/sum(institutospira[1,1]))), 100*(sum(institutospira[1,3])/sum(institutospira[1,1])), 100*(sum(institutospira[1,4])/sum(institutospira[1,1]))) 
+
+
+rownames(proppira) = c("FOP")
+rownames(proplim) = c("FCA", "FT")
+rownames(propcamp) = c("IMECC", "FEM", "FEF", "IA", "IEL", "IFCH", "IFGW", "IQ", "IB", "FEEC", "FEQ", "FE", "IE", "IC", "FEC", "FEAGRI", "FCM", "IG", "FEA", "PROFIS", "FENF", "FCF")
+porptotal = rbind(propcamp, proplim, proppira)
+porptotal = round(porptotal, 2)
+colnames(porptotal) = c("SIM", "NÂO", "ABSTENÇÂO")
+porptotal[,1] = as.numeric(porptotal[,1])
+porptotal[,2] = as.numeric(porptotal[,2])
+porptotal[,3] = as.numeric(porptotal[,3])
+porptotal = porptotal[-21,-3]
+library(d3heatmap)
+library(RColorBrewer)
+d3heatmap(porptotal, col=rev(brewer.pal(9, "BuGn")))
 
 ```
 
 
-
-##Tamanho da amostra
-
-Considerando uma amostra aleatória simples sem reposição, para encontrar o tamanho amostral consideramos o nível de significancia de $\alpha = 0.01, e fixamos um erro de 0.01. Por teoria, temos:
-
-$$
-P = (|\hat{P} - P | \leq B) \approx 1- \alpha
-$$
-
-Agora fixando os valores estabelecidos acima, temos:
-
-$$
-P(|\hat{P} - P | \leq 0.01) \approx 0.99
-$$
-
-Considerando
-
-$$
-n = \frac{N}{\frac{(N-1)D}{(PQ) + 1}}
-$$
-
-```{r tamanhoamostral, echo=FALSE, warning=FALSE, message=FALSE}
-library(xlsx)
-setwd("/Users/Bel Fonseca/Documents/Bel/5ºSemestre/ME524 - Comp (Benilton)/Projeto/votaunicamp/")
-matriculados <-read.xlsx2("vota.xlsx", sheetIndex = 1, header = FALSE)
-tamamostral = subset(mytbl, nivel=='Graduacao')
-colnames(tamamostral) = c("codigo","nivel","curso","total", "sim", "nao", "abstencao")
-tamamostral = tamamostral[,c(-2,-4,-5,-6,-7)]
-tamamostral = cbind(tamamostral, matriculados$X1)
-colnames(tamamostral) = c("codigo","curso","Qtd matriculados")
-```
-
-
-## Gauge Plots
-
-```{r plot_gauge, echo=FALSE, warning=FALSE, message=FALSE}
-tbl0 = subset(mytbl, nivel=='Graduacao')
-tbl0$pnao = round(tbl0$nao/tbl0$total*100, 0)
-gauge = gvisGauge(tbl0[, c('curso', 'pnao')], 'curso', 'nao',
-                  options=list(min=0, max=100, greenFrom=0,
-                                 greenTo=20, yellowFrom=40, yellowTo=60,
-                                 redFrom=80, redTo=100, width=400, height=300))
-plot(gauge)
-```
-
-
-
-## Obtenção de Dados Geográficos
-
-# Campus Campinas
+## Campus Campinas
 ```{r enderecos_campinas, echo=FALSE, warning=FALSE, message=FALSE}
+
 ends = read.table('institutos.tab', sep='\t', header=TRUE)
 localizacao_faltantes = data.frame(matrix(nrow = 3, ncol = 3))
 localizacao_faltantes[1,] = c("PROFIS", -22.8174, -47.06847)
@@ -268,19 +259,7 @@ localizacao_faltantes[,3] = as.numeric(localizacao_faltantes[,3])
 colnames(localizacao_faltantes) = c("instituto","lat","lon")
 ends = rbind(ends,localizacao_faltantes)
 
-#calculando a propoção dos institutos de campinas
-
-institutos[,1] = as.numeric(institutos[,1])
-institutos[,2] = as.numeric(institutos[,2])
-institutos[,3] = as.numeric(institutos[,3])
-institutos[,4] = as.numeric(institutos[,4])
-prop =  data.frame(matrix(nrow = length(institutos$Total), ncol = 3))
-for(i in 1:dim(institutos)[1])
-{ prop[i,] = c((sum(institutos[i,2])/sum(institutos[i,1])), (sum(institutos[i,3])/sum(institutos[i,1])), (sum(institutos[i,4])/sum(institutos[i,1]))) 
-}
-
-
-
+#função para gerar o gráfico que serão add no mapa
 
 fldr <- tempfile()
 dir.create(fldr)
@@ -290,7 +269,6 @@ institutos[,2] = as.numeric(institutos[,2])
 institutos[,3] = as.numeric(institutos[,3])
 institutos[,4] = as.numeric(institutos[,4])
 colnames(institutos) = c("Total","Sim","Não","Abstenção","Nomes")
-
 
 pop <- lapply(seq(length(institutos[,1])), function(i) {
  if(institutos$Total[i]==0){return("Sem Votos")}
@@ -316,15 +294,17 @@ pop <- lapply(seq(length(institutos[,1])), function(i) {
   return(tst)
 })
 
+##gerando o mapa
 
-pal= colorQuantile(c("palegreen1","green2","olivedrab4", "seagreen"),prop$X2)
+pal= colorQuantile("BuGn",propcamp$X2,n=5)
 map = leaflet()
 map = addTiles(map)
-map = addCircleMarkers(map, lat=ends$lat, lng=ends$lon, popup = pop, color = pal(prop$X2))
+map = addCircleMarkers(map, lat=ends$lat, lng=ends$lon, popup = pop, color = pal(propcamp$X2), opacity = 1)
 map
 ```
 
-# Campus Limeira
+
+## Campus Limeira
 
 ```{r enderecos_limeira, echo=FALSE, warning=FALSE, message=FALSE}
 endlim = data.frame(matrix(nrow = 2, ncol = 3))
@@ -334,6 +314,7 @@ colnames(endlim) = c("instituto", "lat", "lon")
 endlim[,2] = as.numeric(endlim[,2])
 endlim[,3] = as.numeric(endlim[,3])
 
+##função para gerar os gráficos que serão add no mapa
 fldr <- tempfile()
 dir.create(fldr)
 
@@ -346,16 +327,6 @@ colnames(institutoslim) = c("Total","Sim","Não","Abstenção","Nomes")
 pop <- lapply(seq(length(institutoslim[,1])), function(i) {
  if(institutoslim$Total[i]==0){return("Sem Votos")}
   
-  respostas = c(rep("Sim",institutoslim[i,2]),rep("Não",institutoslim[i,3]),rep("Abstenção",institutoslim[i,4]))
-  df.resp = as.data.frame(respostas)
-  
-  categs = if(institutoslim[i,4]==0) c("Sim","Não") else c("Sim","Não","Abstenção")
-  cores=c(Sim="#FE2E2E",Não="#0000FF",Abstenção="#3ADF00")
-  
-  # p = ggplot(data = df.resp, aes(x=respostas,fill=respostas))+ geom_bar(stat="count") + xlab("Resposta") +
-  #   ylab("Número de Resposta") + ggtitle(institutoslim$Nomes[i]) + scale_x_discrete(limits = categs) + 
-  #   scale_fill_manual(values=cores,guide=FALSE)
-
   dados <- data.frame(Tipo=c("Sim","Não","Abstenções"),Total=c(0,0,0))
   dados[1,2]<-institutoslim[i,2]
   dados[2,2]<-institutoslim[i,3]
@@ -377,13 +348,16 @@ pop <- lapply(seq(length(institutoslim[,1])), function(i) {
   return(tst)
 })
 
+##gerando o mapa
+
 map = leaflet()
 map = addTiles(map)
 map = addCircleMarkers(map, lat=endlim$lat, lng=endlim$lon, popup = pop)
 map
 ```
 
-# Campus Piracicaba
+
+## Campus Piracicaba
 
 ```{r enderecos_pira, echo=FALSE, warning=FALSE, message=FALSE}
 
@@ -393,7 +367,7 @@ colnames(endpira) = c("instituto", "lat", "lon")
 endpira[,2] = as.numeric(endpira[,2])
 endpira[,3] = as.numeric(endpira[,3])
 
-
+# função para gerar os gráficos que serão add no mapa
 fldr <- tempfile()
 dir.create(fldr)
 
@@ -428,11 +402,14 @@ pop <- lapply(seq(length(institutos[,1])), function(i) {
   return(tst)
 })
 
+## gerando o mapa
 map = leaflet()
 map = addTiles(map)
 map = addCircleMarkers(map, lat=endpira$lat, lng=endpira$lon, popup = pop)
 map
 ```
+
+
 
 
 
@@ -446,6 +423,7 @@ colnames(ics) = c("lower", "upper")
 mytbl$p = p
 mytbl = cbind(mytbl, ics)
 ```
+
 
 ## Tabelas interativa
 
@@ -484,6 +462,7 @@ colnames(tabelafinal) = c("Área","Instituto","Curso","Total","Sim","Não", "Abs
 datatable(tabelafinal, options = list(pageLength = 5))
 
 ```
+
 
 
 ## Comparações
@@ -527,9 +506,12 @@ y = c(rep(1,sum(NaoExatas$nao)), rep(0,sum(NaoExatas$total)-sum(NaoExatas$nao)))
 
 Como temos um valor-p muito baixo, ou seja, menor que o nível de significância escolhido, rejeitamos a hipótese de que as proporções são iguais, confirmando assim o que já era esperado anteriormente. 
 
+
+
 ## Testes de hipótese
 
 Foi realizado testes para a igualdade de proporção de votos **contra** para todos pares de cursos do banco de dados, utilizando como critério os intervalos de confiança de 95% para a proporção em cada curso. Pares de cursos que não foi encontrada interseção significam que, com 95% de certeza, estes pares tem opiniões diferentes em relação à greve: as proporções têm diferenças significativas, mostrando assim uma mentalidade ortodoxa entre os pares selecionados.
+
 
 Devido à escassez de dados para cada curso, se o teste para diferença de proporção foi significativo, significa que a diferença entre as proprções destes pares foi grande.
 
@@ -551,3 +533,13 @@ for (i in (1:(dim(mytbl)[1]-1))){
 Pode-se observar que existe uma polaridade forte na universidade:  `r dim(cursos)[1]` pares de cursos entre todos que foram testados para igualdade de proporção de votos **contra**, falharam, concluindo que estes pares de cursos tiveram opiniões divergentes em relação à greve.
 
 Pode ser observado a forte presença de divergência entre cursos de áreas diferentes (biológicas, exatas e humanas), onde o conflito entre cursos de áreas iguais é bem mais fraco, porém ainda existem, com enfoque no curso "Licenciatura em Física", onde este curso, de exatas, conflituou com outros cursos de exatas com frequência considerável.
+
+
+
+
+
+
+
+
+
+
