--- a/votaUnicamp.Rmd
+++ b/votaUnicamp.Rmd
@@ -56,9 +56,11 @@ library(DT)
 datatable(mytbl, options = list(pageLength = 10))
 ```
 
-##Formatação dos dados
+#Formatação dos dados
 
 ##Análises para Graduação
+
+Descrever as alterações feitas na tabela(adição de )
 
 ```{r separacao_areas, echo=FALSE}
 library(dplyr)
@@ -77,27 +79,27 @@ exatas=filter(graduacao,codigo=="48"|codigo=="42"|codigo=="36"|codigo=="83"|codi
 
 ```{r separando os institutos, echo=FALSE}
 library(dplyr)
-IMECC = filter(graduacao,codigo=="1"|codigo=="2"|codigo=="28"|codigo=="29"|codigo=="51"|codigo=="31"|codigo=="79")
-FEM = filter(graduacao,codigo=="10"|codigo=="49"|codigo=="98"|codigo=='60'|codigo=='92'|codigo=='72'|codigo=="39")
-FCA = filter(graduacao,codigo=="100"|codigo=="107"|codigo=="101"|codigo=="102"|codigo=="33"|codigo=="54"|codigo=="91"|codigo=="52")
-IFGW = filter(graduacao,codigo=="4"|codigo=="108"|codigo=="40"|codigo=="54")
-IFCH = filter(graduacao,codigo=="19"|codigo=="30"|codigo=="44"|codigo=="16"|codigo=="28"|codigo=="25"|codigo=="66"|codigo=="94"|codigo=="74"|codigo=="69"|codigo=="103"|codigo=="27"|codigo=="36"|codigo=="37"|codigo=="75"|codigo=="24"|codigo=="80"|codigo=="38")
-FEEC = filter(graduacao,codigo=="11"|codigo=="41"|codigo=="34"|codigo=="61")
-FEC = filter(graduacao,codigo=="12"|codigo=="32"|codigo=="62"|codigo=="89")
-FOP = filter(graduacao,codigo=="14"|codigo=="16"|codigo=="73"|codigo=="20"|codigo=="19"|codigo=="64"|codigo=="18"|codigo=="67"|codigo=="23"|codigo=="71"|codigo=="70"|codigo=="69")
-FEA = filter(graduacao,codigo=="13"|codigo=="43"|codigo=="81"|codigo=="34"|codigo=="6"|codigo=="7"|codigo=="5"|codigo=="47"|codigo=="56"|codigo=="57"|codigo=="55")
-FCM = filter(graduacao,codigo=="15"|codigo=="21"|codigo=="58"|codigo=="89"|codigo=="8"|codigo=="75"|codigo=="97"|codigo=="23"|codigo=="104"|codigo=="90"|codigo=="87"|codigo=="36"|codigo=="91"|codigo=="100"|codigo=="49"|codigo=="58"|codigo=="35"|codigo=="42"|codigo=="74"|codigo=="50"|codigo=="44"|codigo=="90"|codigo=="48"|codigo=="59")
-IE = filter(graduacao,codigo=="17"|codigo=="47"|codigo=="21"|codigo=="67"|codigo=="53")
-IEL = filter(graduacao,codigo=="7"|codigo=="57"|codigo=="18"|codigo=="75"|codigo=="68"|codigo=="93"|codigo=="57"|codigo=="81"|codigo=="40")
-IA = filter(graduacao,codigo=="26"|codigo=="25"|codigo=="64"|codigo=="23"|codigo=="22"|codigo=="105"|codigo=="106"|codigo=="2"|codigo=="22"|codigo=="83"|codigo=="65"|codigo=="61"|codigo=="60"|codigo=="63"|codigo=="62")
-FEF =filter(graduacao,codigo=="27"|codigo=="45"|codigo=="78"|codigo=="28")
-IC= filter(graduacao,codigo=="42"|codigo=="53"|codigo=="3"|codigo=="35")
-FEQ = filter(graduacao,codigo=="39"|codigo=="9"|codigo=="59")
-IB = filter(graduacao,codigo=="6"|codigo=="46"|codigo=="101"|codigo=="14"|codigo=="10"|codigo=="9"|codigo=="12"|codigo=="13"|codigo=="11")
-IQ = filter(graduacao, codigo=="5"|codigo=="50"|codigo=="55")
-IG = filter(graduacao,codigo=="53"|codigo=="54"|codigo=="55"|codigo=="26"|codigo=="76"|codigo=="24"|codigo=="95"|codigo=="79"|codigo=="41")
-FEAGRI = filter(graduacao, codigo=="8"|codigo=="58")
-FE = filter(graduacao,codigo=="20"|codigo=="38"|codigo=="70"|codigo=="102"|codigo=="86")
+IMECC = filter(graduacao,codigo=="1"|codigo=="2"|codigo=="28"|codigo=="29")
+FEM = filter(graduacao,codigo=="10"|codigo=="49")
+FCA = filter(graduacao,codigo=="100"|codigo=="107"|codigo=="101"|codigo=="102"|codigo=="110"|codigo=="109")
+IFGW = filter(graduacao,codigo=="4"|codigo=="108"|codigo=="40"|codigo=="51")
+IFCH = filter(graduacao,codigo=="19"|codigo=="30"|codigo=="44"|codigo=="16")
+FEEC = filter(graduacao,codigo=="11"|codigo=="41")
+FEC = filter(graduacao,codigo=="12"|codigo=="48")
+FOP = filter(graduacao,codigo=="14")
+FEA = filter(graduacao,codigo=="13"|codigo=="43")
+FCM = filter(graduacao,codigo=="15"|codigo=="58")
+IE = filter(graduacao,codigo=="17"|codigo=="47")
+IEL = filter(graduacao,codigo=="7"|codigo=="57"|codigo=="18"|codigo=="75")
+IA = filter(graduacao,codigo=="26"|codigo=="25"|codigo=="64"|codigo=="23"|codigo=="22")
+FEF =filter(graduacao,codigo=="27"|codigo=="45")
+IC= filter(graduacao,codigo=="42"|codigo=="34")
+FEQ = filter(graduacao,codigo=="39"|codigo=="9")
+IB = filter(graduacao,codigo=="6"|codigo=="46")
+IQ = filter(graduacao, codigo=="5"|codigo=="50")
+IG = filter(graduacao,codigo=="53"|codigo=="54"|codigo=="55")
+FEAGRI = filter(graduacao, codigo=="8")
+FE = filter(graduacao,codigo=="20"|codigo=="38"|codigo=="56")
 PROFIS = filter(graduacao, codigo=="200")
 
 ```
@@ -113,10 +115,14 @@ pespeciais<-mutate(pespeciais,Area="Programas Especiais")
 
 tabelageral=rbind(exatas,biologicas,humanas,artes,pespeciais)
 
+##Exibindo a tabela geral - adição de institutos
+library(DT)
+datatable(tabelageral, options = list(pageLength = 10))
+
 ##adicionando coluna instituto
 IMECC<-mutate(IMECC,Instituto="IMECC")
 FEM<-mutate(FEM,Instituto="FEM")
-FCA<-mutate(FCA,Instituto="IMECC")
+FCA<-mutate(FCA,Instituto="FCA")
 IFGW<-mutate(IFGW,Instituto="IFGW")
 IFCH<-mutate(IFCH,Instituto="IFCH")
 FEEC<-mutate(FEEC,Instituto="FEEC")
@@ -138,14 +144,19 @@ PROFIS<-mutate(PROFIS,Instituto="PROFIS")
 
 tabelageral=rbind(IMECC,FCA,IFGW,IFCH,FEEC,FEC,FOP,FEA,FCM,IE,IA,FEF,IC,FEQ,IB,IQ,IG,FEAGRI,FE,PROFIS)
 
-#*#Adicionando, uma coluna de proporção de sim e outra de não
-tabelageral<-mutate(tabelageral,"Proporção de Sim"=(tabelageral$sim/tabelageral$total))
-tabelageral<-mutate(tabelageral,"Proporção de Não"=(tabelageral$nao/tabelageral$total))
+##Criando uma tabela de proporção
 
-##Exibindo a tabela geral
+codigos<-c(tabelageral$codigo)
+proporcaosim<-round(c((tabelageral$sim/tabelageral$total)),3)
+proporcaonao<-round(c((tabelageral$nao/tabelageral$total)),3)
+
+x<-data.frame(cbind(codigos,proporcaosim,proporcaonao))
+colnames(x)<-c("Códigos","Proporção de Sim", "Proporção de Não")
+datatable(x,options = list(pageLength=10))
+
+##Exibindo a tabela geral - adição de áreas
 library(DT)
 datatable(tabelageral, options = list(pageLength = 10))
-
 ```
 
 #Análise dos Totais de votos
@@ -206,10 +217,10 @@ Comparando o gráfico total de votos da graduação com cada área, concluimos q
 ##fazer grafico de pizza
 ```
 
-##Separação por áreas na pós-graduação
+#Separação por áreas na pós-graduação
 Apesar da greve estudantil ser articulada pelos estudantes da graduação, achamos válido fazer uma análise dos estudantes da pós-graduação, separados em Mestrado e Doutorado para saber se a opinião destes é semelhante à dos alunos da graduação em suas respectivas áreas, levando em conta que o movimento estudantil tem ganhado força e, com isso, interfere também em suas vidas acadêmicas.
 
-#Análises para Mestrado
+###Análises para Mestrado
 
 Primeiramente, faremos análises do Mestrado.
 ```{r, echo=FALSE}
@@ -228,12 +239,12 @@ exatasm=filter(mestrado,codigo=="47"|codigo=="56"|codigo=="57"|codigo=="55"|codi
 
 ```
 
-```{r sepando por instituto}
+```{r sepando por instituto, echo=FALSE}
 ##colocarm na frente
 ```
 
 
-```{r}
+```{r, echo=FALSE}
 #*#criandonovacoluna com areas
 
 library(dplyr)
@@ -243,29 +254,7 @@ humanasm<-mutate(humanasm,Area="Humanas")
 artesm<-mutate(artesm,Area="Artes")
 tabelageralm=rbind(exatasm,biologicasm,humanasm,artesm)
 
-##adicionando coluna instituto
-IMECCm<-mutate(IMECCm,Instituto="IMECC")
-FEMm<-mutate(FEMm,Instituto="FEM")
-FCAm<-mutate(FCAm,Instituto="IMECC")
-IFGWm<-mutate(IFGWm,Instituto="IFGW")
-IFCHm<-mutate(IFCHm,Instituto="IFCH")
-FEECm<-mutate(FEECm,Instituto="FEEC")
-FECm<-mutate(FECm,Instituto="FEC")
-FOPm<-mutate(FOPm,Instituto="FOP")
-FEAm<-mutate(FEAm,Instituto="FEA")
-FCMm<-mutate(FCMm,Instituto="FCM")
-IEm<-mutate(IEm,Instituto="IE")
-IAm<-mutate(IAm,Instituto="IEL")
-FEFm<-mutate(FEFm,Instituto="FEF")
-ICm<-mutate(ICm,Instituto="IC")
-FEQm<-mutate(FEQm,Instituto="FEQ")
-IBm<-mutate(IBm,Instituto="IB")
-IQm<-mutate(IQm,Instituto="IQ")
-IGm<-mutate(IGm,Instituto="IG")
-FEAGRIm<-mutate(FEAGRIm,Instituto="FEAGRI")
-FEm<-mutate(FEm,Instituto="FE")
 
-tabelageralm=rbind(IMECCm,FCAm,IFGWm,IFCHm,FEECm,FECm,FOPm,FEAm,FCMm,IEm,IAm,FEFm,ICm,FEQm,IBm,IQm,IGm,FEAGRIm,FEm)
 
 #*#Adicionando, uma coluna de proporção de sim e outra de não
 tabelageralm<-mutate(tabelageralm,"Proporção de Sim"=(tabelageralm  $sim/tabelageralm$total))
@@ -308,13 +297,10 @@ barplot(c(sum(mestrado$sim),sum(mestrado$nao),sum(mestrado$abstencao)),legend=co
 Como o tamanho da amostra de votos do mestrado é pequeno, não podemos ter respostas certeiras sobre a opinião destas pessoas, contudo os resultados tendem a serem similares com os alunos da graduação.
 
 ##Análise de Proporções
-
-####Proporções por Área
-
-####Proporções por Instituto
+##teste de hipotese
 
 
-#Análises para Doutorado
+###Análises para Doutorado
 
 ```{r separação por areas, echo=FALSE}
 library(dplyr)
@@ -343,30 +329,7 @@ humanasd<-mutate(humanasd,Area="Humanas")
 artesd<-mutate(artesd,Area="Artes")
 tabelagerald=rbind(exatasd,biologicasd,humanasd,artesd)
 
-##adicionando coluna instituto
-IMECCd<-mutate(IMECCd,Instituto="IMECC")
-FEMd<-mutate(FEMd,Instituto="FEM")
-FCAd<-mutate(FCAd,Instituto="IMECC")
-IFGWd<-mutate(IFGWd,Instituto="IFGW")
-IFCHd<-mutate(IFCHd,Instituto="IFCH")
-FEECd<-mutate(FEECd,Instituto="FEEC")
-FECd<-mutate(FECd,Instituto="FEC")
-FOPd<-mutate(FOPd,Instituto="FOP")
-FEAd<-mutate(FEAd,Instituto="FEA")
-FCMd<-mutate(FCMd,Instituto="FCM")
-IEd<-mutate(IEd,Instituto="IE")
-IAd<-mutate(IAd,Instituto="IEL")
-FEFd<-mutate(FEFd,Instituto="FEF")
-ICd<-mutate(ICd,Instituto="IC")
-FEQd<-mutate(FEQd,Instituto="FEQ")
-IBd<-mutate(IBd,Instituto="IB")
-IQd<-mutate(IQd,Instituto="IQ")
-IGd<-mutate(IGd,Instituto="IG")
-FEAGRId<-mutate(FEAGRId,Instituto="FEAGRI")
-FEd<-mutate(FEd,Instituto="FE")
 
-
-tabelagerald=rbind(IMECCd,FCAd,IFGWd,IFCHd,FEECd,FECd,FOPd,FEAd,FCMd,IEd,IAd,FEFd,ICd,FEQd,IBd,IQd,IGd,FEAGRId,FEd,PROFISd)
 
 ##criando novas colunas com proporções
 tabelagerald<-mutate(tabelagerald,"Proporção de Sim"=(tabelagerald$sim/tabelagerald$total))
@@ -378,9 +341,7 @@ datatable(tabelagerald, options = list(pageLength = 10))
 
 ##Análise de Proporções
 
-####Proporções por Área
-
-####Proporções por Instituto
+###teste de hipotese
 
 
 
